--- a/src/app/annonce/annonce.component.html
+++ b/src/app/annonce/annonce.component.html
@@ -1,7 +1,6 @@
 <div>
 <div class="card" style="width: 23rem;" class="col-md-12" *ngIf="ar.prix<prixInput || prixInput==null ">
-  <img src="../../assets/{{ar.image}}" class="card-img-top" alt="...">
-  {{ar.image +"gesd"}}
+  <img src="../../assets/{{ar.image}}" height="200" width="100" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title"><label>Le piéce:</label>{{ar.piece}}</h5>
     <p class="card-text"><label>La marque:</label>{{ar.marque}}</p>
