--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -1,8 +1,11 @@
-<div class="welcom my-3" >
+
+<div class="welcom my-2" >
   <img src="../../assets/c.jpg" class="img-fluid" alt="Responsive image" width="1600" height="1000">
   <div class="d-flex flex-column align-items-center landing">
+    <app-weather-widget></app-weather-widget>
     <h1>WELCOME</h1>
     <h2>For my web Site</h2>
     <button type="button" class="btn btn-success">Visiter</button>
   </div>
   </div>
+
