--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -5,7 +5,7 @@
     <app-weather-widget></app-weather-widget>
     <h1>WELCOME</h1>
     <h2>For my web Site</h2>
-    <button type="button" class="btn btn-success">Visiter</button>
+   <a routerLink="/acc" class="nav-link"> <button type="button" class="btn btn-success">Visiter</button></a>
   </div>
   </div>
 
