--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,15 +9,15 @@
         <a class="nav-link" routerLink="/Accueil">Accueil <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" routerLink="/ajouter">Ajouter <span class="sr-only">(current)</span></a>
+        <a class="nav-link" routerLink="/ajouter">Espace Administrateur et Client <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" routerLink="/favoris">Favoris <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item active">
         <a class="nav-link" routerLink="/pannier">Votre Pannier</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item active">
         <a class="nav-link" routerLink="/contact">Contact</a>
       </li>
 
