--- a/src/app/achat/achat.component.html
+++ b/src/app/achat/achat.component.html
@@ -2,38 +2,46 @@
   <br>
   <h1 class="text-center">*----------Vos Panier----------*</h1>
   <br><br><br><br>
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th scope="col">ID</th>
-      <th scope="col">Piéce</th>
-      <th scope="col">Marque</th>
-      <th scope="col">Etat</th>
-      <th scope="col">Prix</th>
-      <th scope="col">Action</th>
+  <div class="row">
+    <div class="col-md-12">
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th scope="col">ID</th>
+            <th scope="col">Piéce</th>
+            <th scope="col">Marque</th>
+            <th scope="col">Etat</th>
+            <th scope="col">Prix</th>
+            <th scope="col">Image</th>
+            <th scope="col">Action</th>
 
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let i of listeArticle">
-
-
-      <td>{{i.id}}</td>
-      <td>{{i.piece}}</td>
-      <td>{{i.marque}}</td>
-      <td>{{i.etat}}</td>
-      <td>{{i.prix}}</td>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let i of listeArticle">
 
 
-      <td><button type="submit" class="btn btn-danger" (click)="supprimer(i)"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-trash" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-        <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
-        <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4L4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
-      </svg></button>
-     </td>
+            <td>{{i.id}}</td>
+            <td>{{i.piece}}</td>
+            <td>{{i.marque}}</td>
+            <td>{{i.etat}}</td>
+            <td>{{i.prix}}</td>
+          <img src="../../assets/{{i.image}} " width="90" height="60">
 
-    </tr>
-  </tbody>
-</table>
+
+            <td><button type="submit" class="btn btn-danger mr-5" (click)="supprimer(i)"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-trash" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+              <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
+              <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4L4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
+            </svg></button>
+           </td>
+
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
+  </div>
+
 <h1><label style="color:darkgreen">Prix Totale:</label>{{Somme()}} DTN</h1>
 </div>
 <br>
