--- a/src/app/ajouter-annonce/ajouter-annonce.component.html
+++ b/src/app/ajouter-annonce/ajouter-annonce.component.html
@@ -4,6 +4,15 @@
 <div class="row">
   <div class="col-md-10">
    <!-- {{art | json}}-->
+   <div *ngIf="alert==true" class="alert alert-success alert-dismissible fade show" role="alert">
+     <div *ngIf="alertAjout==true">
+    Votre Piéce est Ajouter avec success !</div>
+    <div *ngIf="alertUpdate==true">
+     Votre Piéce est Modifier avec success !</div>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
 <form #f="ngForm">
   <div class="container">
 
@@ -37,10 +46,8 @@
 
         <div>
           <div class="form-group">
-            <label>Upload Image</label>
-            <input type="file" (change)="onFileSelected($event)" class="form-control" />
-
-
+            <label><b>Upload Image:</b></label>
+            <input type="file" (change)="onFileSelected($event)"  class="form-control" />
           </div>
         <label><b>Etat:</b></label>
         <input class="form-control" name="etat" type="text" value="{{ art? art.etat: '' }}" [(ngModel)]="ar.etat"  #p="ngModel" required>
@@ -63,10 +70,9 @@
       </div>
         <div class="alert alert-danger" *ngIf="p.value<0">
         </div>
-        <button type="submit" class="btn btn-success my-5 mx-2 " [disabled]="f.invalid || p.value<0 " (click)="save()" >Ajouter</button>
-          <button type="submit" class="btn btn-danger my-5 mx-5" (click)="update(ar)" >Mise à jour</button>
-        <button type="reset" class="btn btn-danger" >Annuler</button>
-
+        <button type="submit" class="btn btn-success my-5 mx-2 " [disabled]="f.invalid || p.value<0 || teste==true" (click)="save()" >Ajouter</button>
+          <button type="submit" class="btn btn-danger my-5 mx-5"   [disabled]="teste!=true" (click)="update(ar)"  >Mise à jour</button>
+        <button type="reset" class="btn btn-danger" [disabled]="id.invalid">Annuler</button>
       </div>
 </form>
 </div>
