--- a/src/app/favoris/favoris.component.html
+++ b/src/app/favoris/favoris.component.html
@@ -14,6 +14,9 @@
       <th scope="col">Prix</th>
 
       <th scope="col">Action</th>
+      <th scope="col">Image</th>
+
+
 
     </tr>
   </thead>
@@ -26,7 +29,7 @@
       <td>{{i.marque}}</td>
       <td>{{i.etat}}</td>
       <td>{{i.prix}}</td>
-
+      <img src="../../assets/{{i.image}} " width="90" height="60">
 
       <td><button type="submit" class="btn btn-danger" (click)="supprimer(i)"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-trash" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
         <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
