--- a/src/app/achat/achat.component.html
+++ b/src/app/achat/achat.component.html
@@ -1,6 +1,9 @@
+
 <div class="container">
+  <img src="../../assets/ach.jpg" width="1090" height="350">
   <br>
-  <h1 class="text-center">*----------Vos Panier----------*</h1>
+
+
   <br><br><br><br>
   <div class="row">
     <div class="col-md-12">
@@ -29,20 +32,39 @@
           <img src="../../assets/{{i.image}} " width="90" height="60">
 
 
-            <td><button type="submit" class="btn btn-danger mr-5" (click)="supprimer(i)"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-trash" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <td><button type="submit" class="btn btn-danger mr-5" (click)="open(content)"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-trash" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
               <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
               <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4L4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
             </svg></button>
            </td>
+           <ng-template #content let-modal>
+            <div class="modal-header">
+                <h4 class="modal-title" id="modal-basic-title">suppression  </h4>
+                <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                Vous voulez Supprimer?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Non</button>
+                <button type="button" class="btn btn-outline-dark"
+                (click)="supprimer(i);modal.close('Delete successfully')">Oui</button>
 
+            </div>
+          </ng-template>
           </tr>
+
         </tbody>
       </table>
     </div>
 
   </div>
 
-<h1><label style="color:darkgreen">Prix Totale:</label>{{Somme()}} DTN</h1>
+<h1><label style="color:darkgreen">Prix Totale:</label>{{Somme()}} DTN</h1><br>
+<h3>Pour Chaque Piéce 7dt De Livraison:</h3><br>
+<h1><label style="color:darkgreen">Prix Totale avec Livraison:</label>{{SommeLiv()}} DTN</h1>
 </div>
 <br>
 <br>
