--- a/src/app/details-article/details-article.component.html
+++ b/src/app/details-article/details-article.component.html
@@ -1,7 +1,9 @@
 <div>
   <div>
-  <div class="card" style="width: 70rem;" class="col-md-12 my-5" >
-    <img src="../../assets/tail.jpg" class="card-img-top" alt="...">
+    <br>
+    <h1 class="text-center">*----------Description----------*</h1>
+  <div class="card" style="width: 20rem;" class="container my-5" >
+    <img src="../../assets/{{ar.image}}" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title"><label>Le piéce:</label>{{ar.piece}}</h5>
       <p class="card-text"><label>La marque:</label>{{ar.marque}}</p>
