--- a/src/app/favoris/favoris.component.html
+++ b/src/app/favoris/favoris.component.html
@@ -1,7 +1,7 @@
 
 <div class="container">
   <br>
-  <h1  class="text-center">*----------Liste Favoris----------*</h1>
+  <img src="../../assets/ach.jpg"  width="1090" height="350">
   <br><br><br><br>
 
 <table class="table table-striped">
@@ -12,9 +12,9 @@
       <th scope="col">Marque</th>
       <th scope="col">Etat</th>
       <th scope="col">Prix</th>
-
-      <th scope="col">Action</th>
       <th scope="col">Image</th>
+      <th scope="col">Action</th>
+
 
 
 
@@ -31,19 +31,54 @@
       <td>{{i.prix}}</td>
       <img src="../../assets/{{i.image}} " width="90" height="60">
 
-      <td><button type="submit" class="btn btn-danger" (click)="supprimer(i)"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-trash" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+      <td><button type="submit" class="btn btn-danger" (click)="open(content)"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-trash" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
         <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
         <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4L4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
       </svg></button>
 
 
-        <button type="submit" class="btn btn-success" (click)="panier(i)"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-cart4" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+        <button type="submit" class="btn btn-success" (click)="open1(content1)"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-cart4" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
           <path fill-rule="evenodd" d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l.5 2H5V5H3.14zM6 5v2h2V5H6zm3 0v2h2V5H9zm3 0v2h1.36l.5-2H12zm1.11 3H12v2h.61l.5-2zM11 8H9v2h2V8zM8 8H6v2h2V8zM5 8H3.89l.5 2H5V8zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
         </svg></button></td>
+        <ng-template #content let-modal>
+          <div class="modal-header">
+              <h4 class="modal-title" id="modal-basic-title">suppression  </h4>
+              <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+                  <span aria-hidden="true">&times;</span>
+              </button>
+          </div>
+          <div class="modal-body">
+              Vous voulez Supprimer?
+          </div>
+          <div class="modal-footer">
+              <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Non</button>
+              <button type="button" class="btn btn-outline-dark"
+              (click)="supprimer(i);modal.close('Delete successfully')">Oui</button>
 
+          </div>
+        </ng-template>
+        <ng-template #content1 let-modal>
+          <div class="modal-header">
+              <h4 class="modal-title" id="modal-basic-title">Ajouter  </h4>
+              <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+                  <span aria-hidden="true">&times;</span>
+              </button>
+          </div>
+          <div class="modal-body">
+              Vous Voulez Ajouter Dans le Pannier?
+          </div>
+          <div class="modal-footer">
+              <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Non</button>
+              <button type="button" class="btn btn-outline-dark"
+              (click)="panier(i);modal.close('Delete successfully')">Oui</button>
+
+          </div>
+        </ng-template>
     </tr>
+
   </tbody>
 </table>
+
 </div>
 <br>
 <br>
